--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,6 @@
         </div>
       </div>
     </nav>
-    <div id="content"></div>
+    <div id="content" class="p-4"></div>
   </body>
 </html>
