--- a/public/pages/podcasts/podcasts.html
+++ b/public/pages/podcasts/podcasts.html
@@ -11,6 +11,7 @@
 			<th class="px-4 py-2 text-left">Last Build Date</th>
 			<th class="px-4 py-2 text-left">Artist Name</th>
 			<th class="px-4 py-2 text-left">Explicit</th>
+			<th class="px-4 py-2 text-left">Actions</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -26,6 +27,11 @@
 			<td class="border px-4 py-2">{{ .LastBuildDate }}</td>
 			<td class="border px-4 py-2">{{ .ArtistName }}</td>
 			<td class="border px-4 py-2">{{ .Explicit }}</td>
+			<td class="border px-4 py-2">
+				<div hx-get="/popup/{{ .Id }}" hx-target="#popup-{{ .Id }}" hx-swap="innerHTML">
+					<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" onclick="openPopup('{{ .Id }}')">Open Popup</button>
+				</div>
+			</td>
 		</tr>
 		{{ end }}
 	</tbody>
