--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,40 @@
 <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+<link rel="stylesheet" href="styles.css">
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Podcast App</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
-  </head>
-  <body>
-    <nav class="bg-gray-800">
-      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-        <div class="relative flex h-16 items-center justify-between">
-          <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+
+<head>
+  <title>Podcast App</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/styles.css">
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<body>
+  <nav class="bg-gray-800">
+    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+      <div class="relative flex h-16 items-center justify-between">
+        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+        </div>
+        <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+          <div class="flex shrink-0 items-center">
+            <img class="h-10 w-auto" src="/assets/podcast-img.svg" alt="Go Podcast RSS">
           </div>
-          <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-            <div class="flex shrink-0 items-center">
-              <img class="h-10 w-auto" src="/assets/podcast-img.svg" alt="Go Podcast RSS">
-            </div>
-            <div class="hidden sm:ml-6 sm:block">
-              <div class="flex space-x-4">
-                <a hx-get="/dashboard" hx-target="#content" hx-swap="innerHTML" hx-trigger="click" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dashboard</a>
-                <a hx-get="/podcasts" hx-target="#content" hx-swap="innerHTML" hx-trigger="click" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Podcasts</a>
-                <a hx-get="/downloads" hx-target="#content" hx-swap="innerHTML" hx-trigger="click" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Downloads</a>
-              </div>
+          <div class="hidden sm:ml-6 sm:block">
+            <div class="flex space-x-4">
+              <a hx-get="/dashboard" hx-target="#content" hx-swap="innerHTML" hx-trigger="click"
+                class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dashboard</a>
+              <a hx-get="/podcasts" hx-target="#content" hx-swap="innerHTML" hx-trigger="click"
+                class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Podcasts</a>
+              <a hx-get="/downloads" hx-target="#content" hx-swap="innerHTML" hx-trigger="click"
+                class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Downloads</a>
             </div>
           </div>
         </div>
       </div>
-    </nav>
-    <div id="content" class="p-4 overflow-x-auto"></div>
+    </div>
+  </nav>
+  <div id="content" class="p-4 overflow-x-auto overflow-y-scroll sticky top-16 custom-height"></div>
+</body>
 
-    <script>
-      function openPopup(id) {
-        fetch('/popup/' + id)
-          .then(response => response.text())
-          .then(html => {
-            document.getElementById('popup-' + id).innerHTML = html;
-          });
-      }
-      </script>
-  </body>
 </html>
