--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div x-data="{ openModal: false}" class="flex flex-col">
+<div x-data="{ openModal: false, modalTitle: ''}" class="flex flex-col">
     {{ range .AppleResponse }}
     <div class="flex mb-4 bg-white rounded-lg shadow-md p-4 hover:bg-gray-100">
         <img src="{{ .Image }}" alt="{{ .Title }}" class="h-48 object-cover mr-4 rounded-lg">
@@ -6,7 +6,8 @@
             <div class="flex items-center">
                 <h2 class="text-lg font-bold text-gray-900 py-1 mr-2">{{ .Title }}</h2>
                 <p class="text-xs text-gray-500 bg-gray-200 rounded-full px-2 py-1 mr-2">{{ .Category }}</p>
-                <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-2 rounded inline-block" @click="openModal = true">
+                <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-2 rounded inline-block"
+                    @click="openModal = true; modalTitle = '{{ .Title }}'">
                     <img src="../assets/add.svg" class="w-5 h-5 inline-block" />
                 </button>
             </div>
@@ -24,7 +25,7 @@
             <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                 <div class="sm:flex sm:items-start">
                     <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                        <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">Modal title</h3>
+                        <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline" x-text="modalTitle"></h3>
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">Modal body text goes here.</p>
                         </div>
@@ -33,7 +34,8 @@
             </div>
             <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                 <button type="button"
-                    class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
+                    class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white
+                     text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
                     @click="openModal = false">Close</button>
             </div>
         </div>
