--- a/public/pages/dashboard/modal.html
+++ b/public/pages/dashboard/modal.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
+        <h5 class="modal-title">Modal titlee</h5>
       </div>
       <div class="modal-body">
         <p>Modal body text goes here.</p>
